; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_line_log_print.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_line_log_print.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rev_info = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.commit = type { i32 }
%struct.line_log_data = type { i32 }

@DIFF_FORMAT_NO_OUTPUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @line_log_print(%struct.rev_info* %0, %struct.commit* %1) #0 {
  %3 = alloca %struct.rev_info*, align 8
  %4 = alloca %struct.commit*, align 8
  %5 = alloca %struct.line_log_data*, align 8
  store %struct.rev_info* %0, %struct.rev_info** %3, align 8
  store %struct.commit* %1, %struct.commit** %4, align 8
  %6 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %7 = call i32 @show_log(%struct.rev_info* %6)
  %8 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %9 = getelementptr inbounds %struct.rev_info, %struct.rev_info* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @DIFF_FORMAT_NO_OUTPUT, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %22, label %15

15:                                               ; preds = %2
  %16 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %17 = load %struct.commit*, %struct.commit** %4, align 8
  %18 = call %struct.line_log_data* @lookup_line_range(%struct.rev_info* %16, %struct.commit* %17)
  store %struct.line_log_data* %18, %struct.line_log_data** %5, align 8
  %19 = load %struct.rev_info*, %struct.rev_info** %3, align 8
  %20 = load %struct.line_log_data*, %struct.line_log_data** %5, align 8
  %21 = call i32 @dump_diff_hacky(%struct.rev_info* %19, %struct.line_log_data* %20)
  br label %22

22:                                               ; preds = %15, %2
  ret i32 1
}

declare dso_local i32 @show_log(%struct.rev_info*) #1

declare dso_local %struct.line_log_data* @lookup_line_range(%struct.rev_info*, %struct.commit*) #1

declare dso_local i32 @dump_diff_hacky(%struct.rev_info*, %struct.line_log_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
